# ad-block

./: .gitignore  .gitmodules  .npmignore  .travis.yml  ABPFilterParser.cpp  ABPFilterParser.h  ABPFilterParserWrap.cpp  ABPFilterParserWrap.h  COMPATIBILITY.md  Makefile  README.md  ad_block_client.cc  ad_block_client.h  ad_block_client_wrap.cc  ad_block_client_wrap.h  addon.cc  addon.cpp  badFingerprint.h  badFingerprints.h  badFingerprints4.h  badFingerprints5.h  badFingerprints6.h  badFingerprints7.h  badFingerprints8.h  bad_fingerprint.h  bad_fingerprints.h  base.h  binding.gyp  context_domain.cc  context_domain.h  cosmeticFilter.cpp  cosmeticFilter.h  cosmetic_filter.h  data_file_version.h  filter.cc  filter.cpp  filter.h  filter_list.cc  filter_list.h  main.cc  (+10 more)
brave/: BUILD.gn
etld/: domain.cc  domain.h  etld.cc  etld.h  matcher.cc  matcher.h  parser.cc  parser.h  public_suffix_rule.cc  public_suffix_rule.h  public_suffix_rule_set.cc  public_suffix_rule_set.h  serialization.cc  serialization.h  types.h
etld/internal/: parser.cc  parser.h  public_suffix_rule.cc  public_suffix_rule.h  public_suffix_rule_set.cc  public_suffix_rule_set.h
lib/: defaultAdblockLists.js  filtering.js  malware.js  regions.js  util.js
lists/: CPPLINT.cfg  default.h  malware.h  regions.h
muon/: BUILD.gn  addon.cc
other/: binding.gyp
perf/: binding.gyp
sample/: binding.gyp
scripts/: check.js  clean.js  cpplint.py  discoverBlockingRules.js  generateDataFiles.js  generateManifestFiles.js  uploadDataFiles.js
test/: binding.gyp  cosmetic-filter-test.cpp  etld_blocking_test.cc  etld_serialization_test.cc  etld_test.cc  matching_test.cc  options-test.cpp  options_test.cc  orig_filters_test.cc  parser-test.cpp  parser_test.cc  protocol_test.cc  rule-types-test.cpp  serialization_test.cc  test-main.cpp  test.h  test1.cpp  util.cpp  util.h
test/data/: brave-unbreak.txt  disconnect-simple-malware.txt  easylist.txt  public_suffix_list_short.txt  spam404-main-blacklist.txt  ublock-unbreak.txt
test/js/: etldTest.js  filterListTest.js  filteringTest.js  fingerprintTest.js  getFilters.js  matchingTest.js  parsingTest.js  serializationTest.js  utilTest.js
