source_set("ad_block") {
  configs += [
    "//electron/build:electron_config",
  ]

  include_dirs = [
    "//electron/vendor/ad-block",
    "//electron/vendor/hashset-cpp",
    "//electron/vendor/bloom-filter-cpp",
    "//v8/include/"
  ]

  sources = [
    "//electron/vendor/ad-block/ad_block_client.cc",
    "//electron/vendor/ad-block/ad_block_client.h",
    "//electron/vendor/ad-block/ad_block_client_wrap.cc",
    "//electron/vendor/ad-block/ad_block_client_wrap.h",
    "//electron/vendor/ad-block/muon/addon.cc",
    "//electron/vendor/ad-block/cosmetic_filter.cc",
    "//electron/vendor/ad-block/cosmetic_filter.h",
    "//electron/vendor/ad-block/filter.cc",
    "//electron/vendor/ad-block/filter.h",
  ]

  deps = [
    "//electron/vendor/hashset-cpp/muon:hashset_cpp",
    "//electron/vendor/bloom-filter-cpp/muon:bloom_filter_cpp",
  ]
}
